--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-10.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-10.md
@@ -30,24 +30,28 @@ Google stock forged a cup-and-handle base with an entry point of 182.49.
 
 
 
-'Willow' Quantum Chip Could Lift Google Stock
----------------------------------------------
+'Willow' Quantum Chip Could Lift Google Stock“Willow”量子芯片可能会提振谷歌股票
+------------------------------------------------------------------
 
 
-On Tuesday, Google stock pushed into a buy zone amid the announcement of the Willow [quantum computing](https://blog.google/technology/research/google-willow-quantum-chip/) chip. Google has been a [leader in quantum research](https://www.investors.com/news/technology/quantum-computing-after-artificial-intelligence-it-could-be-the-next-big-thing/). But quantum technology has faced challenges.  
+On Tuesday, Google stock pushed into a buy zone amid the announcement of the Willow [quantum computing](https://blog.google/technology/research/google-willow-quantum-chip/) chip. Google has been a [leader in quantum research](https://www.investors.com/news/technology/quantum-computing-after-artificial-intelligence-it-could-be-the-next-big-thing/). But quantum technology has faced challenges.  
+周二，谷歌股票在 Willow [量子计算](https://blog.google/technology/research/google-willow-quantum-chip/)芯片发布后推至买入区域。Google 一直是[量子研究的领导者](https://www.investors.com/news/technology/quantum-computing-after-artificial-intelligence-it-could-be-the-next-big-thing/)。但量子技术面临着挑战。
 
 
-Advances in quantum computing are expected to surpass today's electronic-chip-based supercomputers. Quantum computing works on a subatomic level and uses exotic technologies, like supercold superconductor chips. Quantum computing's ultimate benefit is that it solves problems too complex for today's classical computers.  
+Advances in quantum computing are expected to surpass today's electronic-chip-based supercomputers. Quantum computing works on a subatomic level and uses exotic technologies, like supercold superconductor chips. Quantum computing's ultimate benefit is that it solves problems too complex for today's classical computers.  
+量子计算的进步有望超过当今基于电子芯片的超级计算机。量子计算在亚原子水平上工作，并使用超冷超导体芯片等奇特的技术。量子计算的最终好处是，它解决了对于当今经典计算机来说过于复杂的问题。
 
 
-Google stock hit an all-time high of 191.75 on July 10. Shares have ping-ponged since July after they hit an all-time high.  
+Google stock hit an all-time high of 191.75 on July 10. Shares have ping-ponged since July after they hit an all-time high.  
+谷歌股票在 7 月 10 日创下 191.75 的历史新高。自7月以来，股价在创下历史新高后一直表现不佳。
 
 
-The impact of generative artificial intelligence on the internet search advertising business of Alphabet remains a key issue for investors. Also, antitrust lawsuits filed by the Department of Justice have pressured Google stock.  
+The impact of generative artificial intelligence on the internet search advertising business of Alphabet remains a key issue for investors. Also, antitrust lawsuits filed by the Department of Justice have pressured Google stock.  
+生成式人工智能对 Alphabet 互联网搜索广告业务的影响仍然是投资者的关键问题。此外，美国司法部提起的反垄断诉讼也给谷歌股票带来了压力。
 
 
-Waymo Expansion
----------------
+Waymo Expansion Waymo 扩展
+------------------------
 
 
 On the other hand, Google continues to create advanced technologies. Waymo is widely viewed as the [leader in autonomous vehicles](https://www.wsj.com/tech/waymo-san-francisco-self-driving-robotaxis-uber-244feecf?).  
@@ -59,11 +63,11 @@ Meanwhile, Waymo on Dec. 5 announced that the company plans to expand its autono
 
 
 Meanwhile, Waymo also disclosed that it has reached 150,000 trips per week, representing rapid growth from August's 100,00 per week. In October, Waymo closed a $5.6 billion funding round, including from Google and previous investors. If Wall Street analysts start including Waymo in Alphabet's valuation, it would be a big development.  
-与此同时，Waymo 还透露，它已达到每周 150,000 次出行，比 8 月份的每周 100,00 次快速增长。10 月，Waymo 完成了 56 亿美元的融资，包括来自谷歌和之前投资者的融资。如果华尔街分析师开始将 Waymo 纳入 Alphabet 的估值，那将是一个重大进展。
+与此同时，Waymo 还透露，它已达到每周 150,000 次出行，比 8 月份的每周 100,00 次快速增长。去年 10 月，Waymo 完成了 56 亿美元的融资，包括来自谷歌和之前投资者的融资。如果华尔街分析师开始将 Waymo 纳入 Alphabet 的估值，那将是一个很大的进展。
 
 
 One wild card heading into 2025 is the status of YouTube rival TikTok. An appeals court upheld a federal law requiring TikTok to shed its Chinese ownership or be banned in the U.S. The decision relied on warnings from U.S. officials that the Chinese government can require ByteDance, the app's Beijing-based parent company, to provide access to U.S. users' data.  
-进入 2025 年的一张外卡是 YouTube 竞争对手 TikTok 的地位。一家上诉法院维持了一项联邦法律，要求 TikTok 放弃其在中国的所有权或在美国被禁止。该决定基于美国官员的警告，即中国政府可以要求该应用位于北京的母公司字节跳动提供对美国用户数据的访问权限。
+进入 2025 年的一张万能牌是 YouTube 竞争对手 TikTok 的地位。一家上诉法院维持了一项联邦法律，要求 TikTok 放弃其在中国的所有权或在美国被禁止。该决定基于美国官员的警告，即中国政府可以要求该应用位于北京的母公司字节跳动提供对美国用户数据的访问权限。
 
 
 If TikTok is banned next year in the U.S., there's limited upside for Google and YouTube, said a Deutsche Bank report.  
