--- a/_columns/The_Big_Picture/zh-cn/2024-12-11.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-11.md
@@ -157,16 +157,20 @@ And Brian Coulton, chief economist at Fitch Ratings, noted that core inflation m
 **YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology  
+IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest  
+股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Nasdaq Tops 20,000 As Tesla, Titans Surge; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-tops-20000-tesla-hits-high/)
+[Nasdaq Tops 20,000 As Tesla, Titans Surge; What To Do Now  
+纳斯达克指数突破 20,000 点，特斯拉、巨头飙升;现在该做什么](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-tops-20000-tesla-hits-high/)
 
 
 
