--- a/_columns/The_Big_Picture/zh-cn/2024-12-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-12.md
@@ -111,7 +111,8 @@ That means investors should be utilizing diligent [risk management](https://www.
 这意味着投资者应该利用勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。监控行为不正常的头寸并卖出任何触发卖出规则的股票非常重要。
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)). The Near Pivot list has four stock ideas, and one is Dow Jones media giant **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)), which is approaching a 118.63 buy point.  
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)). The Near Pivot list has four stock ideas, and one is Dow Jones media giant **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)), which is approaching a 118.63 buy point.  
+[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单中有一只新股：**Manhattan Associates** （[MANH）。](https://research.investors.com/quote.aspx?symbol=MANH)Near Pivot 列表有四个股票想法，其中一个是道琼斯媒体巨头**华特迪士尼** （[DIS](https://research.investors.com/quote.aspx?symbol=DIS)），它正在接近 118.63 的买入点。
 
 
 
@@ -119,7 +120,8 @@ That means investors should be utilizing diligent [risk management](https://www.
 ---
 
 
-[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks  
+“应用程序”拥有它——Palantir 和其他 26 只股票也是如此**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -169,13 +171,16 @@ Manhattan Associates rallied 3% Thursday, breaking out past a 306.63 cup-with-ha
 在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
