--- a/_columns/The_Big_Picture/zh-cn/2024-12-13.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-13.md
@@ -29,7 +29,7 @@ Decliners outstripped advancers by around 2-to-1 on both the New York Stock Exch
 
 
 The Dow Jones Industrial Average lagged the other major indexes after falling 0.2% Friday, its seventh daily decline in a row. It ended the week down a bruising 1.8% and has fallen below the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) were among the best performers on the much-watched index, while **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) lagged.  
-道琼斯工业平均指数周五下跌 0.2%，连续第七天下跌，落后于其他主要指数。本周收盘下跌 1.8%，跌破 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 和 **UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 在备受关注的指数中表现最佳，而**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 则落后。
+道琼斯工业平均指数周五下跌 0.2%，连续第七天下跌，落后于其他主要指数。本周收盘下跌 1.8%，跌破 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 和 **UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 在备受关注的指数中表现最好的股票中名列前茅，而**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 则落后。
 
 
 Small caps were hit hardest by the bears, with the Russell 2000 falling 0.6%. A test of the 50-day line could be imminent amid a weekly decline of 2.5%. The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund impressed by reversing higher, ending Friday with a robust 1% gain.  
