--- a/_columns/Swing_Trading/zh-cn/2024-12-13.md
+++ b/_columns/Swing_Trading/zh-cn/2024-12-13.md
@@ -29,7 +29,8 @@ When the market got its postelection bump, the Magnificent Seven stocks were big
 当市场在大选后出现上涨时，华丽七大股票是大受益者 **（1）。**但与许多股票一样，它们经历了一段冷静期，并经历了几次支撑测试 **（2）。**
 
 
-On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with the FNGG ETF on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(4)**. In addition to the original [FANG stocks](https://www.investors.com/tag/fang-stock-news/), it includes more recent heavyweights like **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) and **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)). Though already concentrated with just 10 stocks, we went with the leveraged version to get a stronger performance if we were right. At the same time, that means paying particular attention to risk management in case the trade doesn't work out.  
+On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with the FNGG ETF on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(4)**. In addition to the original [FANG stocks](https://www.investors.com/tag/fang-stock-news/), it includes more recent heavyweights like **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) and **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)). Though already concentrated with just 10 stocks, we went with the leveraged version to get a stronger performance if we were right. At the same time, that means paying particular attention to risk management in case the trade doesn't work out.  
+在反弹 **（3）** 中，我们在 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) 上添加了 NYSE FANG+ 指数的杠杆版本和 FNGG ETF**（4）。**除了最初的 [FANG 股票](https://www.investors.com/tag/fang-stock-news/)外，它还包括 **Nvidia** （[NVDA）、](https://research.investors.com/quote.aspx?symbol=NVDA)**Broadcom** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 和 **ServiceNow** （[NOW](https://research.investors.com/quote.aspx?symbol=NOW)） 等最近的重量级股票。虽然已经集中在只有 10 只股票，但如果我们是对的，我们选择了杠杆版本以获得更强的表现。同时，这意味着要特别注意风险管理，以防交易不成功。
 
 
 
@@ -37,7 +38,8 @@ On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with
 ---
 
 
-[**This Trader Shares How Risk Management Helped Him Achieve Gains Over 900% This Year**](https://www.investors.com/ibd-videos/videos/player-stats-building-the-dream-technical-theme-for-your-portfolio) 
+[**This Trader Shares How Risk Management Helped Him Achieve Gains Over 900% This Year  
+这位交易员分享了风险管理如何帮助他今年实现超过 900% 的收益**](https://www.investors.com/ibd-videos/videos/player-stats-building-the-dream-technical-theme-for-your-portfolio)
 
 
 
